# proyecto-2-snies-extractor-sniesdos

./: .gitignore  CMakeLists.txt  README.md  informe.md
include/: include.zip.asc  json.hpp.asc  json_fwd.hpp.asc
src/: Consolidado.cpp  Consolidado.h  GestorArchivo.cpp  GestorArchivo.h  GestorArchivos.cpp  GestorArchivos.h  GestorBase.h  GestorCsv.cpp  GestorCsv.h  GestorDatos.h  GestorJSON.cpp  GestorJSON.h  GestorJson.cpp  GestorJson.h  GestorTxt.cpp  GestorTxt.h  ProgramaAcademico.cpp  ProgramaAcademico.h  SNIESController.cpp  SNIESController.h  Settings.cpp  Settings.h  View.cpp  View.h  main.cpp
